Bug 354895 - bad sorting/formatting in country list combo boxes
Summary: bad sorting/formatting in country list combo boxes
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_formats (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Kügler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-05 12:59 UTC by Jonathan Marten
Modified: 2015-11-05 17:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Marten 2015-11-05 12:59:55 UTC
The country lists in the "Region" and the five "Detailed" combo boxes are not sorted strictly alphabetically.  There isn't enough space here to copy the complete list, but for example the entries in the region combo are:

No change
SouthAfrica -  (ts_ZA)
France -  (co_FR)
Russia -  (tt_RU)
[snip ...]
SouthAfrica -  (nso_ZA)
Australia -  (wbp_AU)
Default -  (C)
Russia -  (ba_RU)
Ethiopia -  (aa_ET)
Äland - svenska (sv_AX)
[from here on everything is correct]

Note also that, where there is no applicable language (i.e. all those appearing above "Default" and a few below), there are two spaces after the hyphen.

Reproducible: Always

Steps to Reproduce:
1.  Execute 'kcmshell5 formats'
2.  Click on one of the combo boxes, and observe the list results.




This doesn't affect functionality - all of the required settings are available - but this is a big list so it should be sorted as expected so that navigation is as easy as possible.

Version (not in the preset list for this component) is current Git master:
systemsettings 5.4.90
Comment 1 Jonathan Marten 2015-11-05 14:27:24 UTC
https://git.reviewboard.kde.org/r/125957/
Comment 2 Jonathan Marten 2015-11-05 17:12:57 UTC
Git commit 4e033cdabfb876d75d5a8e08c74259559f9e38be by Jonathan Marten.
Committed on 05/11/2015 at 17:09.
Pushed by marten into branch 'master'.

kcm_formats: Fix sorting order and formatting in combo boxes

REVIEW:125957

M  +17   -3    kcms/formats/kcmformats.cpp

http://commits.kde.org/plasma-desktop/4e033cdabfb876d75d5a8e08c74259559f9e38be