kcm_formats: Fix sorting order and formatting in combo boxes

REVIEW:125957
BUG:354895